name: ohm-chat-server
version: 1.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.20

Data-Dir: resources
Data-files:
  index.html
  main.js
  style.css

Library
  exposed-modules: ChatTypes
  build-depends:
    aeson,
    base,
    text
  if impl(ghcjs)
    build-depends:
      ghcjs-base
  ghc-options: -Wall -O2 -threaded

Executable chat-snap
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    chat,
    engine-io,
    engine-io-snap,
    snap-core,
    snap-server,
    socket-io,
    stm,
    text,
    transformers
  main-is: MainSnap.hs
  other-modules: Paths_chat Chat
  ghc-options: -Wall -O2 -threaded


-- Executable chat-yesod
--   default-language: Haskell2010
--   build-depends:
--     aeson,
--     base,
--     engine-io,
--     yesod-core,
--     yesod-static,
--     engine-io-yesod,
--     socket-io,
--     stm,
--     text,
--     transformers,
--     template-haskell
--   main-is: MainYesod.hs
--   ghc-options: -Wall -O2 -threaded
